--- a/datasets/get_pharmacophore.ipynb
+++ b/datasets/get_pharmacophore.ipynb
@@ -74,7 +74,7 @@
     "\"\"\"\n",
     "data_prfix : path of \"crossdocked_v1.1_rmsd1.0_pocket10\"\n",
     "\"\"\"\n",
-    "data_prefix = '/home/user/work/3D/PharDiff/data/crossdocked_v1.1_rmsd1.0_pocket10'\n",
+    "data_prefix = './3D-MOL-GENERATION/anonymous/data/crossdocked_v1.1_rmsd1.0_pocket10'\n",
     "complex_path = data_prefix.replace(\"crossdocked_v1.1_rmsd1.0_pocket10\", \"complex\")\n",
     "\n",
     "complex_dir = glob.glob(complex_path+\"/*\")\n",
@@ -115,7 +115,7 @@
     "    bsids = [\":\".join([x.hetid, x.chain, str(x.position)]) for x in mol.ligands]\n",
     "    indices = [j for j,x in enumerate(longnames) if x == 'ISK']  \n",
     "\n",
-    "    # Interaction Parsing !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n",
+    "    # Interaction Parsing \n",
     "    inter_list = []\n",
     "    for bs in bsids:\n",
     "        interactions = mol.interaction_sets[bs]\n",
@@ -174,12 +174,12 @@
     "    Ligand sdf parsing\n",
     "    \"\"\"             \n",
     "\n",
-    "    vocab_dir = '/home/user/work/3D/PharDiff/datasets/vocab_.txt'\n",
+    "    vocab_dir = './3D-MOL-GENERATION/anonymous/vocab_.txt'\n",
     "\n",
     "    with open(vocab_dir, 'r') as f:\n",
     "        vocab = [x.strip() for x in f.readlines()]    \n",
     "      \n",
-    "    vocab_fp = pd.read_csv('/home/user/work/3D/PharDiff/datasets/vocab_blur_fps_updated.csv', index_col=0)\n",
+    "    \n",
     "    vocab = Vocab(vocab)           \n",
     "    temp = pair.split('/')\n",
     "    temp_dir = os.path.join('/'.join(temp[:-2]), temp[-1].replace(\"complex_\", \"\").replace(\".pdb\", \".sdf\"))\n",
