--- a/datasets/get_pharmacophore.ipynb
+++ b/datasets/get_pharmacophore.ipynb
@@ -249,11 +249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('frag_vocab.pickle','wb') as fw:\n",
+    "# with open('./3D-MOL-GENERATION/anonymous/frag_vocab.pickle','wb') as fw:\n",
     "#     pickle.dump(vocab_super, fw)\n",
-    "import pickle\n",
-    "with open('/home/csy/work/3D/targetdiff_phar/datasets/frag_vocab.pickle', 'rb') as fr:\n",
-    "    user_loaded = pickle.load(fr)"
+    "# import pickle\n",
+    "# with open('./3D-MOL-GENERATION/anonymous/datasets/frag_vocab.pickle', 'rb') as fr:\n",
+    "#     user_loaded = pickle.load(fr)"
    ]
   }
  ],
